--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 asgiref==3.11.0
 beautifulsoup4
-cloudinary
-django-cloudinary-storage
+django-storages[s3]
+boto3
 crispy-bootstrap5==2025.6
 diff-match-patch==20241021
 dj-database-url
